pygui/ccimgui.pxd


    ctypedef enum ImGuiButtonFlagsPrivate_:
        ImGuiButtonFlags_PressedOnClick
        ImGuiButtonFlags_PressedOnClickRelease
        ImGuiButtonFlags_PressedOnClickReleaseAnywhere
        ImGuiButtonFlags_PressedOnRelease
        ImGuiButtonFlags_PressedOnDoubleClick
        ImGuiButtonFlags_PressedOnDragDropHold
        ImGuiButtonFlags_Repeat
        ImGuiButtonFlags_FlattenChildren
        ImGuiButtonFlags_AllowItemOverlap
        ImGuiButtonFlags_DontClosePopups
        ImGuiButtonFlags_AlignTextBaseLine
        ImGuiButtonFlags_NoKeyModifiers
        ImGuiButtonFlags_NoHoldingActiveId
        ImGuiButtonFlags_NoNavFocus
        ImGuiButtonFlags_NoHoveredOnFocus
        ImGuiButtonFlags_NoSetKeyOwner
        ImGuiButtonFlags_NoTestKeyOwner
        ImGuiButtonFlags_PressedOnMask_
        ImGuiButtonFlags_PressedOnDefault_

    ctypedef enum ImGuiCol_:
        ImGuiCol_Text
        ImGuiCol_TextDisabled
        ImGuiCol_WindowBg
        ImGuiCol_ChildBg
        ImGuiCol_PopupBg
        ImGuiCol_Border
        ImGuiCol_BorderShadow
        ImGuiCol_FrameBg
        ImGuiCol_FrameBgHovered
        ImGuiCol_FrameBgActive
        ImGuiCol_TitleBg
        ImGuiCol_TitleBgActive
        ImGuiCol_TitleBgCollapsed
        ImGuiCol_MenuBarBg
        ImGuiCol_ScrollbarBg
        ImGuiCol_ScrollbarGrab
        ImGuiCol_ScrollbarGrabHovered
        ImGuiCol_ScrollbarGrabActive
        ImGuiCol_CheckMark
        ImGuiCol_SliderGrab
        ImGuiCol_SliderGrabActive
        ImGuiCol_Button
        ImGuiCol_ButtonHovered
        ImGuiCol_ButtonActive
        ImGuiCol_Header
        ImGuiCol_HeaderHovered
        ImGuiCol_HeaderActive
        ImGuiCol_Separator
        ImGuiCol_SeparatorHovered
        ImGuiCol_SeparatorActive
        ImGuiCol_ResizeGrip
        ImGuiCol_ResizeGripHovered
        ImGuiCol_ResizeGripActive
        ImGuiCol_Tab
        ImGuiCol_TabHovered
        ImGuiCol_TabActive
        ImGuiCol_TabUnfocused
        ImGuiCol_TabUnfocusedActive
        ImGuiCol_DockingPreview
        ImGuiCol_DockingEmptyBg
        ImGuiCol_PlotLines
        ImGuiCol_PlotLinesHovered
        ImGuiCol_PlotHistogram
        ImGuiCol_PlotHistogramHovered
        ImGuiCol_TableHeaderBg
        ImGuiCol_TableBorderStrong
        ImGuiCol_TableBorderLight
        ImGuiCol_TableRowBg
        ImGuiCol_TableRowBgAlt
        ImGuiCol_TextSelectedBg
        ImGuiCol_DragDropTarget
        ImGuiCol_NavHighlight
        ImGuiCol_NavWindowingHighlight
        ImGuiCol_NavWindowingDimBg
        ImGuiCol_ModalWindowDimBg
        ImGuiCol_COUNT

    ctypedef enum ImGuiColorEditFlags_:
        ImGuiColorEditFlags_None
        ImGuiColorEditFlags_NoAlpha
        ImGuiColorEditFlags_NoPicker
        ImGuiColorEditFlags_NoOptions
        ImGuiColorEditFlags_NoSmallPreview
        ImGuiColorEditFlags_NoInputs
        ImGuiColorEditFlags_NoTooltip
        ImGuiColorEditFlags_NoLabel
        ImGuiColorEditFlags_NoSidePreview
        ImGuiColorEditFlags_NoDragDrop
        ImGuiColorEditFlags_NoBorder
        ImGuiColorEditFlags_AlphaBar
        ImGuiColorEditFlags_AlphaPreview
        ImGuiColorEditFlags_AlphaPreviewHalf
        ImGuiColorEditFlags_HDR
        ImGuiColorEditFlags_DisplayRGB
        ImGuiColorEditFlags_DisplayHSV
        ImGuiColorEditFlags_DisplayHex
        ImGuiColorEditFlags_Uint8
        ImGuiColorEditFlags_Float
        ImGuiColorEditFlags_PickerHueBar
        ImGuiColorEditFlags_PickerHueWheel
        ImGuiColorEditFlags_InputRGB
        ImGuiColorEditFlags_InputHSV
        ImGuiColorEditFlags_DefaultOptions_
        ImGuiColorEditFlags_DisplayMask_
        ImGuiColorEditFlags_DataTypeMask_
        ImGuiColorEditFlags_PickerMask_
        ImGuiColorEditFlags_InputMask_

    ctypedef enum ImGuiComboFlagsPrivate_:
        ImGuiComboFlags_CustomPreview

    ctypedef enum ImGuiComboFlags_:
        ImGuiComboFlags_None
        ImGuiComboFlags_PopupAlignLeft
        ImGuiComboFlags_HeightSmall
        ImGuiComboFlags_HeightRegular
        ImGuiComboFlags_HeightLarge
        ImGuiComboFlags_HeightLargest
        ImGuiComboFlags_NoArrowButton
        ImGuiComboFlags_NoPreview
        ImGuiComboFlags_HeightMask_

    ctypedef enum ImGuiCond_:
        ImGuiCond_None
        ImGuiCond_Always
        ImGuiCond_Once
        ImGuiCond_FirstUseEver
        ImGuiCond_Appearing

    ctypedef enum ImGuiConfigFlags_:
        ImGuiConfigFlags_None
        ImGuiConfigFlags_NavEnableKeyboard
        ImGuiConfigFlags_NavEnableGamepad
        ImGuiConfigFlags_NavEnableSetMousePos
        ImGuiConfigFlags_NavNoCaptureKeyboard
        ImGuiConfigFlags_NoMouse
        ImGuiConfigFlags_NoMouseCursorChange
        ImGuiConfigFlags_DockingEnable
        ImGuiConfigFlags_ViewportsEnable
        ImGuiConfigFlags_DpiEnableScaleViewports
        ImGuiConfigFlags_DpiEnableScaleFonts
        ImGuiConfigFlags_IsSRGB
        ImGuiConfigFlags_IsTouchScreen

    ctypedef enum ImGuiContextHookType:
        ImGuiContextHookType_NewFramePre
        ImGuiContextHookType_NewFramePost
        ImGuiContextHookType_EndFramePre
        ImGuiContextHookType_EndFramePost
        ImGuiContextHookType_RenderPre
        ImGuiContextHookType_RenderPost
        ImGuiContextHookType_Shutdown
        ImGuiContextHookType_PendingRemoval_

    ctypedef enum ImGuiDataAuthority_:
        ImGuiDataAuthority_Auto
        ImGuiDataAuthority_DockNode
        ImGuiDataAuthority_Window

    ctypedef enum ImGuiDataType_:
        ImGuiDataType_S8
        ImGuiDataType_U8
        ImGuiDataType_S16
        ImGuiDataType_U16
        ImGuiDataType_S32
        ImGuiDataType_U32
        ImGuiDataType_S64
        ImGuiDataType_U64
        ImGuiDataType_Float
        ImGuiDataType_Double
        ImGuiDataType_COUNT

    ctypedef enum ImGuiDataTypePrivate_:
        ImGuiDataType_String
        ImGuiDataType_Pointer
        ImGuiDataType_ID

    ctypedef enum ImGuiDebugLogFlags_:
        ImGuiDebugLogFlags_None
        ImGuiDebugLogFlags_EventActiveId
        ImGuiDebugLogFlags_EventFocus
        ImGuiDebugLogFlags_EventPopup
        ImGuiDebugLogFlags_EventNav
        ImGuiDebugLogFlags_EventClipper
        ImGuiDebugLogFlags_EventIO
        ImGuiDebugLogFlags_EventDocking
        ImGuiDebugLogFlags_EventViewport
        ImGuiDebugLogFlags_EventMask_
        ImGuiDebugLogFlags_OutputToTTY

    ctypedef enum ImGuiDir_:
        ImGuiDir_None
        ImGuiDir_Left
        ImGuiDir_Right
        ImGuiDir_Up
        ImGuiDir_Down
        ImGuiDir_COUNT

    ctypedef enum ImGuiDockNodeFlagsPrivate_:
        ImGuiDockNodeFlags_DockSpace
        ImGuiDockNodeFlags_CentralNode
        ImGuiDockNodeFlags_NoTabBar
        ImGuiDockNodeFlags_HiddenTabBar
        ImGuiDockNodeFlags_NoWindowMenuButton
        ImGuiDockNodeFlags_NoCloseButton
        ImGuiDockNodeFlags_NoDocking
        ImGuiDockNodeFlags_NoDockingSplitMe
        ImGuiDockNodeFlags_NoDockingSplitOther
        ImGuiDockNodeFlags_NoDockingOverMe
        ImGuiDockNodeFlags_NoDockingOverOther
        ImGuiDockNodeFlags_NoDockingOverEmpty
        ImGuiDockNodeFlags_NoResizeX
        ImGuiDockNodeFlags_NoResizeY
        ImGuiDockNodeFlags_SharedFlagsInheritMask_
        ImGuiDockNodeFlags_NoResizeFlagsMask_
        ImGuiDockNodeFlags_LocalFlagsMask_
        ImGuiDockNodeFlags_LocalFlagsTransferMask_
        ImGuiDockNodeFlags_SavedFlagsMask_

    ctypedef enum ImGuiDockNodeFlags_:
        ImGuiDockNodeFlags_None
        ImGuiDockNodeFlags_KeepAliveOnly
        ImGuiDockNodeFlags_NoDockingInCentralNode
        ImGuiDockNodeFlags_PassthruCentralNode
        ImGuiDockNodeFlags_NoSplit
        ImGuiDockNodeFlags_NoResize
        ImGuiDockNodeFlags_AutoHideTabBar

    ctypedef enum ImGuiDockNodeState:
        ImGuiDockNodeState_Unknown
        ImGuiDockNodeState_HostWindowHiddenBecauseSingleWindow
        ImGuiDockNodeState_HostWindowHiddenBecauseWindowsAreResizing
        ImGuiDockNodeState_HostWindowVisible

    ctypedef enum ImGuiDragDropFlags_:
        ImGuiDragDropFlags_None
        ImGuiDragDropFlags_SourceNoPreviewTooltip
        ImGuiDragDropFlags_SourceNoDisableHover
        ImGuiDragDropFlags_SourceNoHoldToOpenOthers
        ImGuiDragDropFlags_SourceAllowNullID
        ImGuiDragDropFlags_SourceExtern
        ImGuiDragDropFlags_SourceAutoExpirePayload
        ImGuiDragDropFlags_AcceptBeforeDelivery
        ImGuiDragDropFlags_AcceptNoDrawDefaultRect
        ImGuiDragDropFlags_AcceptNoPreviewTooltip
        ImGuiDragDropFlags_AcceptPeekOnly

    ctypedef enum ImGuiFocusedFlags_:
        ImGuiFocusedFlags_None
        ImGuiFocusedFlags_ChildWindows
        ImGuiFocusedFlags_RootWindow
        ImGuiFocusedFlags_AnyWindow
        ImGuiFocusedFlags_NoPopupHierarchy
        ImGuiFocusedFlags_DockHierarchy
        ImGuiFocusedFlags_RootAndChildWindows

    ctypedef enum ImGuiHoveredFlags_:
        ImGuiHoveredFlags_None
        ImGuiHoveredFlags_ChildWindows
        ImGuiHoveredFlags_RootWindow
        ImGuiHoveredFlags_AnyWindow
        ImGuiHoveredFlags_NoPopupHierarchy
        ImGuiHoveredFlags_DockHierarchy
        ImGuiHoveredFlags_AllowWhenBlockedByPopup
        ImGuiHoveredFlags_AllowWhenBlockedByActiveItem
        ImGuiHoveredFlags_AllowWhenOverlapped
        ImGuiHoveredFlags_AllowWhenDisabled
        ImGuiHoveredFlags_NoNavOverride
        ImGuiHoveredFlags_RectOnly
        ImGuiHoveredFlags_RootAndChildWindows
        ImGuiHoveredFlags_DelayNormal
        ImGuiHoveredFlags_DelayShort
        ImGuiHoveredFlags_NoSharedDelay

    ctypedef enum ImGuiInputEventType:
        ImGuiInputEventType_None
        ImGuiInputEventType_MousePos
        ImGuiInputEventType_MouseWheel
        ImGuiInputEventType_MouseButton
        ImGuiInputEventType_MouseViewport
        ImGuiInputEventType_Key
        ImGuiInputEventType_Text
        ImGuiInputEventType_Focus
        ImGuiInputEventType_COUNT

    ctypedef enum ImGuiInputFlags_:
        ImGuiInputFlags_None
        ImGuiInputFlags_Repeat
        ImGuiInputFlags_RepeatRateDefault
        ImGuiInputFlags_RepeatRateNavMove
        ImGuiInputFlags_RepeatRateNavTweak
        ImGuiInputFlags_RepeatRateMask_
        ImGuiInputFlags_CondHovered
        ImGuiInputFlags_CondActive
        ImGuiInputFlags_CondDefault_
        ImGuiInputFlags_CondMask_
        ImGuiInputFlags_LockThisFrame
        ImGuiInputFlags_LockUntilRelease
        ImGuiInputFlags_RouteFocused
        ImGuiInputFlags_RouteGlobalLow
        ImGuiInputFlags_RouteGlobal
        ImGuiInputFlags_RouteGlobalHigh
        ImGuiInputFlags_RouteMask_
        ImGuiInputFlags_RouteAlways
        ImGuiInputFlags_RouteUnlessBgFocused
        ImGuiInputFlags_RouteExtraMask_
        ImGuiInputFlags_SupportedByIsKeyPressed
        ImGuiInputFlags_SupportedByShortcut
        ImGuiInputFlags_SupportedBySetKeyOwner
        ImGuiInputFlags_SupportedBySetItemKeyOwner

    ctypedef enum ImGuiInputSource:
        ImGuiInputSource_None
        ImGuiInputSource_Mouse
        ImGuiInputSource_Keyboard
        ImGuiInputSource_Gamepad
        ImGuiInputSource_Clipboard
        ImGuiInputSource_Nav
        ImGuiInputSource_COUNT

    ctypedef enum ImGuiInputTextFlagsPrivate_:
        ImGuiInputTextFlags_Multiline
        ImGuiInputTextFlags_NoMarkEdited
        ImGuiInputTextFlags_MergedItem
